/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package snapshotpb;
import "runner.proto";
option go_package = "github.com/kform-dev/choreo/pkg/proto/snapshotpb";


service Snapshot {
    rpc Get (Get.Request) returns (Get.Response) {}
    rpc List (List.Request) returns (List.Response) {}
    rpc Delete (Delete.Request) returns (Delete.Response) {}
    rpc Diff (Diff.Request) returns (Diff.Response) {}
    rpc Result (Result.Request) returns (Result.Response) {}
    rpc Watch (Watch.Request) returns (stream Watch.Response) {}
    
  }

message Get {
    message Request {
        string id = 1;
        Options options = 2;        
    }

    message Response {
        bytes object = 1; 
    }

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
    }
}

message List {
    message Request {
        Options options = 1; 
    }

    message Response {
        bytes object = 1;
    }

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
    }
}

message Delete {
    message Request {
        string id = 1;
        Options options = 2; 
    }

    message Response {
    }

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
    }
}

message Diff {
    message Request {
        Options options = 1;
    }

    message Response {
        bytes object = 1; 
    }

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
        bool showManagedField = 3;
        bool showChoreoAPIs = 4;
        bool showFinalConfig = 5;
    }
}

message Result {
    message Request {
        Options options = 1;
    }

    message Response {
        runnerpb.Once.RunResponse runResponse = 4;
    }

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
    }
}

message Watch {
    message Request {
        Options options = 1;
    }

    message Response {
        bytes object = 1; 
        EventType eventType = 2;

    }

    enum EventType{
        ERROR = 0;
        ADDED = 1;
        MODIFIED = 2;
        DELETED = 3;
        BOOKMARK = 4;
    }  

    message Options {
        string proxyName = 1;
        string proxyNamespace = 2;
        bool watch = 3;
    }
}